<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:orientation="horizontal" >
        
        <RelativeLayout
			android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >            
            <ImageButton
	            android:id="@+id/greetings_button"
	            android:layout_width="150dp"
	            android:layout_height="150dp"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="0dp"
		        android:adjustViewBounds="true"
		        android:padding="10dp"
		        android:scaleType="fitCenter"
                android:layout_centerInParent="true"		        
		        android:background="@color/white"			            
	            android:src="@drawable/greetings" />            
            <TextView 
                android:layout_below="@id/greetings_button"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/greetings_button"/>            
        </RelativeLayout>
        
        <RelativeLayout
			android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >            
	        <ImageButton
	            android:id="@+id/button2"
	            android:layout_width="150dp"
	            android:layout_height="150dp"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="0dp"
		        android:adjustViewBounds="true"
		        android:padding="10dp"
		        android:scaleType="fitCenter"
                android:layout_centerInParent="true"		        
		        android:background="@color/white"			            
	            android:src="@drawable/waving_bye" />	            
            <TextView 
                android:layout_below="@id/button2"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/departures_button"/>           
        </RelativeLayout>                
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:orientation="horizontal" >

        <RelativeLayout
			android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >            
            <ImageButton
	            android:id="@+id/button1"
	            android:layout_width="150dp"
	            android:layout_height="150dp"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="0dp"
		        android:adjustViewBounds="true"
		        android:padding="10dp"
		        android:scaleType="fitCenter"
                android:layout_centerInParent="true"		        
		        android:background="@color/white"			            
	            android:src="@drawable/disagreements" />            
            <TextView 
                android:layout_below="@id/button1"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/disagreements_button"/>            
        </RelativeLayout>
        
        <RelativeLayout
			android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >            
	        <ImageButton
	            android:id="@+id/button2"
	            android:layout_width="150dp"
	            android:layout_height="150dp"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="0dp"
		        android:adjustViewBounds="true"
		        android:padding="10dp"
		        android:scaleType="fitCenter"
                android:layout_centerInParent="true"		        
		        android:background="@color/white"			            
	            android:src="@drawable/dos_and_donts" />	            
            <TextView 
                android:layout_below="@id/button2"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/dos_and_donts_button"/>           
        </RelativeLayout>  
    </LinearLayout>
</LinearLayout>